# lore-web-collections

./: Cargo.toml
impl/lore-impl-web-collections-2026-04-07-1/: Cargo.toml
impl/lore-impl-web-collections-2026-04-07-1/src/: lib.rs
impl/lore-impl-web-collections-2026-04-07-1/tests/: test.rs
impl/lore-impl-web-collections-2026-04-07-2/: Cargo.toml
impl/lore-impl-web-collections-2026-04-07-2/examples/: example.html
impl/lore-impl-web-collections-2026-04-07-2/src/: impl_context.rs  lib.rs  lore_html.rs  parser.rs
impl/lore-impl-web-collections-2026-04-07-2/tests/: test-feature-math.rs  test.rs
lexer/lore-lexer-web-collections-2026-04-07-1/: Cargo.toml
lexer/lore-lexer-web-collections-2026-04-07-1/src/: lib.rs
lexer/lore-lexer-web-collections-2026-04-07-1/tests/: test.rs
lexer/lore-lexer-web-collections-2026-04-07-2/: Cargo.toml
lexer/lore-lexer-web-collections-2026-04-07-2/examples/: examples.lore
lexer/lore-lexer-web-collections-2026-04-07-2/src/: lib.rs
lexer/lore-lexer-web-collections-2026-04-07-2/tests/: test.rs
lore-web-collections-core/: Cargo.toml
lore-web-collections-core/src/: lib.rs
